<resources>
    <string name="app_name">FirstTry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="view_class">View Class</string>
    <string name="textview">TextView</string>
    <string name="string_textview" />
    <string name="add_class">Add Class</string>
    <string name="attendanceTitle">AttendanceText</string>
    <string name="damonWalkerPicture">DamonWalker</string>
    <string name="damon_WalkerText">Damon Walker</string>
    <string name="DamonAbsentBtn">Absent</string>
    <string name="DamonPresentBtn">Present</string>
    <string name="MoPic">MOPic</string>
    <string name="MoText">MOText</string>
    <string name="MoAbsentBtn">Absent</string>
    <string name="MoPresentBtn">Present</string>
    <string name="SydPic">Syd</string>
    <string name="SydText">SydText</string>
    <string name="SydAbsentBtn">Absent</string>
    <string name="SydPresentBtn">Present</string>
    <string name="MarkPic">MarkPic</string>
    <string name="MarkText">MarkText</string>
    <string name="MarkText">MarkText</string>
    <string name="MarkAbsentBtn">Absent</string>
    <string name="MarkPresentBtn">Present</string>
    <string name="WillPic">WillPic</string>
    <string name="WillText">WillText</string>
    <string name="WillText">WillText</string>
    <string name="WillAbsentBtn">Absent</string>
    <string name="WillPresentBtn">Present</string>
    <string name="JacobPic">Jacob</string>
    <string name="JacobText">JacobText</string>
    <string name="JacobText">JacobText</string>
    <string name="JacobAbsentBtn">Absent</string>
    <string name="JacobPresentBtn">Present</string>
    <string name="ArminPic">ArminPic</string>
    <string name="ArminText">ArminText</string>
    <string name="ArminAbsentBtn">Absent</string>
    <string name="ArminPresentBtn">Present</string>
    <string name="WillRoster">TextView</string>
    <string name="JacobRoster">TextView</string>
    <string name="RituRoster">TextView</string>
    <string name="RosterText">TextView</string>
    <string name="AshmaRoster">TextView</string>
    <string name="ArminRoster">TextView</string>
    <string name="CourtneyRoster">TextView</string>
    <string name="DamonRoster">TextView</string>
    <string name="SydneyRoster">TextView</string>
    <string name="AddStudentButton">Add Student</string>
    <string name="AttendanceButtenRoster">Attendance</string>
    <string name="MarkRoster">TextView</string>
    <string name="MORoster">TextView</string>
</resources>
