<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassDisplay"
    android:background="@drawable/solid">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/WillRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        tools:text="Will" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/JacobRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:text="Jacob" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/RituRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Ritu" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="380dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/RosterText"
        android:textColor="#0C0B0B"
        android:textSize="100sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="@font/amiko_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Roster" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="12dp"
        android:text="@string/MORoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="MO." />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="12dp"
        android:text="@string/AshmaRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Ashma" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/MarkRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        tools:text="Mark" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="80dp"
        android:text="@string/ArminRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/addStudent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Armin" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="80dp"
        android:text="@string/CourtneyRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/attendance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Courtney" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="12dp"
        android:text="@string/DamonRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Damon" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="12dp"
        android:text="@string/SydneyRoster"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:typeface="sans"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Sydney" />

    <Button
        android:id="@+id/addStudent"
        android:layout_width="153dp"
        android:layout_height="92dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="88dp"
        android:text="@string/AddStudentButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/attendance"
        android:layout_width="153dp"
        android:layout_height="92dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="88dp"
        android:text="@string/AttendanceButtenRoster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>